src/test/resources/frontendReference/invalid/syntaxErr/if/ifNothen.waccast
-- Compiling...
Errors detected during compilation! Exit code 100 returned.
Syntactic Error at 13:2 -- mismatched input 'else' expecting {'-', '*', '/', '%', '+', '<', '<=', '>=', '>', '==', '!=', '&&', '||', 'then'}
1 parser error(s) detected, no further compilation attempted.
